@@ -1,8 +1,12 @@
 package uk.gov.justice.laa.portal.landingpage.controller;
 
+import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getListFromHttpSession;
+import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFromHttpSession;
+
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -10,10 +14,14 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.authorization.AuthorizationDeniedException;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -31,22 +39,24 @@ import jakarta.servlet.http.HttpSession;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import uk.gov.justice.laa.portal.landingpage.constants.ModelAttributes;
 import uk.gov.justice.laa.portal.landingpage.dto.AppDto;
 import uk.gov.justice.laa.portal.landingpage.dto.AppRoleDto;
 import uk.gov.justice.laa.portal.landingpage.dto.CreateUserAuditEvent;
 import uk.gov.justice.laa.portal.landingpage.dto.CurrentUserDto;
 import uk.gov.justice.laa.portal.landingpage.dto.EntraUserDto;
 import uk.gov.justice.laa.portal.landingpage.dto.FirmDto;
-import uk.gov.justice.laa.portal.landingpage.dto.OfficeData;
 import uk.gov.justice.laa.portal.landingpage.dto.OfficeDto;
 import uk.gov.justice.laa.portal.landingpage.dto.UpdateUserAuditEvent;
 import uk.gov.justice.laa.portal.landingpage.dto.UserProfileDto;
+import uk.gov.justice.laa.portal.landingpage.dto.UserSearchCriteria;
 import uk.gov.justice.laa.portal.landingpage.entity.EntraUser;
 import uk.gov.justice.laa.portal.landingpage.entity.Office;
 import uk.gov.justice.laa.portal.landingpage.entity.Permission;
 import uk.gov.justice.laa.portal.landingpage.entity.UserProfile;
 import uk.gov.justice.laa.portal.landingpage.entity.UserType;
 import uk.gov.justice.laa.portal.landingpage.exception.CreateUserDetailsIncompleteException;
+import uk.gov.justice.laa.portal.landingpage.exception.TechServicesClientException;
 import uk.gov.justice.laa.portal.landingpage.forms.ApplicationsForm;
 import uk.gov.justice.laa.portal.landingpage.forms.EditUserDetailsForm;
 import uk.gov.justice.laa.portal.landingpage.forms.FirmSearchForm;
@@ -55,18 +65,20 @@ import uk.gov.justice.laa.portal.landingpage.forms.RolesForm;
 import uk.gov.justice.laa.portal.landingpage.forms.UserDetailsForm;
 import uk.gov.justice.laa.portal.landingpage.model.OfficeModel;
 import uk.gov.justice.laa.portal.landingpage.model.PaginatedUsers;
+import uk.gov.justice.laa.portal.landingpage.model.UserRole;
 import uk.gov.justice.laa.portal.landingpage.service.AccessControlService;
+import uk.gov.justice.laa.portal.landingpage.service.EmailValidationService;
 import uk.gov.justice.laa.portal.landingpage.service.EventService;
 import uk.gov.justice.laa.portal.landingpage.service.FirmService;
 import uk.gov.justice.laa.portal.landingpage.service.LoginService;
 import uk.gov.justice.laa.portal.landingpage.service.OfficeService;
 import uk.gov.justice.laa.portal.landingpage.service.RoleAssignmentService;
 import uk.gov.justice.laa.portal.landingpage.service.UserService;
-import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getListFromHttpSession;
-import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFromHttpSession;
+import uk.gov.justice.laa.portal.landingpage.techservices.SendUserVerificationEmailResponse;
+import uk.gov.justice.laa.portal.landingpage.techservices.TechServicesApiResponse;
+import uk.gov.justice.laa.portal.landingpage.utils.CcmsRoleGroupsUtil;
 import uk.gov.justice.laa.portal.landingpage.utils.UserUtils;
 import uk.gov.justice.laa.portal.landingpage.viewmodel.AppRoleViewModel;
-import uk.gov.justice.laa.portal.landingpage.viewmodel.AppViewModel;
 
 /**
  * User Controller
@@ -85,10 +97,21 @@ public class UserController {
     private final ModelMapper mapper;
     private final AccessControlService accessControlService;
     private final RoleAssignmentService roleAssignmentService;
+    private final EmailValidationService emailValidationService;
 
-    /**
-     * Retrieves a list of users from Microsoft Graph API.
-     */
+    @Value("${feature.flag.enable.resend.verification.code}")
+    private boolean enableResendVerificationCode;
+
+    @GetMapping("/user/firms/search")
+    @ResponseBody
+    @PreAuthorize("@accessControlService.authenticatedUserHasAnyGivenPermissions(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).VIEW_EXTERNAL_USER,"
+            + "T(uk.gov.justice.laa.portal.landingpage.entity.Permission).VIEW_INTERNAL_USER)")
+    public List<FirmDto> getFirms(Authentication authentication,
+            @RequestParam(value = "q", defaultValue = "") String query) {
+        EntraUser entraUser = loginService.getCurrentEntraUser(authentication);
+        return firmService.getUserAccessibleFirms(entraUser, query);
+    }
+
     @GetMapping("/users")
     @PreAuthorize("@accessControlService.authenticatedUserHasAnyGivenPermissions(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).VIEW_EXTERNAL_USER,"
             + "T(uk.gov.justice.laa.portal.landingpage.entity.Permission).VIEW_INTERNAL_USER)")
@@ -100,30 +123,58 @@ public class UserController {
             @RequestParam(name = "usertype", required = false) String usertype,
             @RequestParam(name = "search", required = false, defaultValue = "") String search,
             @RequestParam(name = "showFirmAdmins", required = false) boolean showFirmAdmins,
+            @RequestParam(name = "backButton", required = false) boolean backButton,
+            FirmSearchForm firmSearchForm,
             Model model, HttpSession session, Authentication authentication) {
+
+        // Process request parameters and handle session filters
+        Map<String, Object> processedFilters = processRequestFilters(size, page, sort, direction, usertype, search,
+                showFirmAdmins, backButton, session, firmSearchForm);
+        size = (Integer) processedFilters.get("size");
+        page = (Integer) processedFilters.get("page");
+        sort = (String) processedFilters.get("sort");
+        direction = (String) processedFilters.get("direction");
+        usertype = (String) processedFilters.get("usertype");
+        search = (String) processedFilters.get("search");
+        firmSearchForm = (FirmSearchForm) processedFilters.get("firmSearchForm");
+        showFirmAdmins = (Boolean) processedFilters.get("showFirmAdmins");
 
         PaginatedUsers paginatedUsers;
         EntraUser entraUser = loginService.getCurrentEntraUser(authentication);
-        boolean internal = accessControlService.authenticatedUserHasPermission(Permission.VIEW_INTERNAL_USER);
-        boolean canSeeAllUsers = internal
+        boolean internal = userService.isInternal(entraUser.getId());
+        boolean canSeeAllUsers = accessControlService.authenticatedUserHasPermission(Permission.VIEW_INTERNAL_USER)
                 && accessControlService.authenticatedUserHasPermission(Permission.VIEW_EXTERNAL_USER);
-        List<Permission> permissions = new ArrayList<>();
-        if (showFirmAdmins) {
-            permissions.add(Permission.CREATE_EXTERNAL_USER);
-        }
+
+        // Debug logging
+        log.debug("UserController.displayAllUsers - search: '{}', firmSearch: '{}', showFirmAdmins: {}",
+                search, firmSearchForm, showFirmAdmins);
+
         if (canSeeAllUsers) {
-            paginatedUsers = userService.getPageOfUsersByNameOrEmailAndPermissionsAndFirm(search, permissions, null,
-                    page, size, sort, direction);
-        } else if (internal) {
-            permissions.add(Permission.VIEW_INTERNAL_USER);
-            paginatedUsers = userService.getPageOfUsersByNameOrEmailAndPermissionsAndFirm(search, permissions, null,
-                    page, size, sort, direction);
+            UserSearchCriteria searchCriteria = new UserSearchCriteria(search, firmSearchForm, null, showFirmAdmins);
+            paginatedUsers = userService.getPageOfUsersBySearch(searchCriteria, page, size, sort, direction);
+        } else if (accessControlService.authenticatedUserHasPermission(Permission.VIEW_INTERNAL_USER)) {
+            UserSearchCriteria searchCriteria = new UserSearchCriteria(search, firmSearchForm, UserType.INTERNAL,
+                    showFirmAdmins);
+            paginatedUsers = userService.getPageOfUsersBySearch(searchCriteria, page, size, sort, direction);
+        } else if (accessControlService.authenticatedUserHasPermission(Permission.VIEW_EXTERNAL_USER) && internal) {
+            UserSearchCriteria searchCriteria = new UserSearchCriteria(search, firmSearchForm, UserType.EXTERNAL,
+                    showFirmAdmins);
+            paginatedUsers = userService.getPageOfUsersBySearch(searchCriteria, page, size, sort, direction);
         } else {
+            // External user - restrict to their firm only
             Optional<FirmDto> optionalFirm = firmService.getUserFirm(entraUser);
             if (optionalFirm.isPresent()) {
-                FirmDto firm = optionalFirm.get();
-                paginatedUsers = userService.getPageOfUsersByNameOrEmailAndPermissionsAndFirm(search, permissions,
-                        firm.getId(), page, size, sort, direction);
+                // Check if user is trying to access a specific firm via firmSearchForm
+                UUID selectedFirmId = firmSearchForm != null ? firmSearchForm.getSelectedFirmId() : null;
+                if (selectedFirmId != null && !optionalFirm.get().getId().equals(selectedFirmId)) {
+                    throw new RuntimeException("Firm access denied");
+                }
+                FirmSearchForm searchForm = Optional.ofNullable(firmSearchForm)
+                        .orElse(FirmSearchForm.builder().build());
+                searchForm.setSelectedFirmId(optionalFirm.get().getId());
+                UserSearchCriteria searchCriteria = new UserSearchCriteria(search, searchForm, UserType.EXTERNAL,
+                        showFirmAdmins);
+                paginatedUsers = userService.getPageOfUsersBySearch(searchCriteria, page, size, sort, direction);
             } else {
                 // Shouldn't happen, but return nothing if external user has no firm
                 paginatedUsers = new PaginatedUsers();
@@ -144,6 +195,7 @@ public class UserController {
         model.addAttribute("totalUsers", paginatedUsers.getTotalUsers());
         model.addAttribute("totalPages", paginatedUsers.getTotalPages());
         model.addAttribute("search", search);
+        model.addAttribute("firmSearch", firmSearchForm);
         model.addAttribute("sort", sort);
         model.addAttribute("direction", direction);
         model.addAttribute("usertype", usertype);
@@ -152,7 +204,50 @@ public class UserController {
         boolean allowCreateUser = accessControlService.authenticatedUserHasPermission(Permission.CREATE_EXTERNAL_USER);
         model.addAttribute("allowCreateUser", allowCreateUser);
 
+        // If firmSearchForm is already populated from session (e.g., validation
+        // errors), keep it
+        FirmSearchForm existingForm = (FirmSearchForm) session.getAttribute("firmSearchForm");
+        if (existingForm != null) {
+            firmSearchForm = existingForm;
+            session.removeAttribute("firmSearchForm");
+        }
+
+        model.addAttribute("firmSearchForm", firmSearchForm);
+
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Manage your users");
+
         return "users";
+    }
+
+    /**
+     * Helper method to check if filters contain any active (non-default) values
+     */
+    private boolean hasActiveFilters(Map<String, Object> filters) {
+        if (filters == null) {
+            return false;
+        }
+
+        // Check if any filter has a non-default value
+        String search = (String) filters.get("search");
+        String usertype = (String) filters.get("usertype");
+        String sort = (String) filters.get("sort");
+        String direction = (String) filters.get("direction");
+        Boolean showFirmAdmins = (Boolean) filters.get("showFirmAdmins");
+        Integer size = (Integer) filters.get("size");
+        Integer page = (Integer) filters.get("page");
+        FirmSearchForm firmSearchForm = (FirmSearchForm) filters.get("firmSearchForm");
+
+        return (search != null && !search.isEmpty())
+                || (usertype != null && !usertype.isEmpty())
+                || (sort != null && !sort.isEmpty())
+                || (direction != null && !direction.isEmpty())
+                || (showFirmAdmins != null && showFirmAdmins)
+                || (size != null && size != 10)
+                || (page != null && page != 1)
+                || (firmSearchForm != null
+                        && firmSearchForm.getSelectedFirmId() != null
+                        && firmSearchForm.getFirmSearch() != null
+                        && !firmSearchForm.getFirmSearch().isEmpty());
     }
 
     @GetMapping("/users/edit/{id}")
@@ -164,6 +259,7 @@ public class UserController {
             List<AppRoleDto> roles = userService.getUserAppRolesByUserId(user.getId().toString());
             model.addAttribute("user", user);
             model.addAttribute("roles", roles);
+            model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user - " + user.getFullName());
         }
         return "edit-user";
     }
@@ -183,20 +279,92 @@ public class UserController {
      */
     @GetMapping("/users/manage/{id}")
     @PreAuthorize("@accessControlService.canAccessUser(#id)")
-    public String manageUser(@PathVariable String id, Model model) {
+    public String manageUser(@PathVariable String id, Model model, HttpSession session) {
         Optional<UserProfileDto> optionalUser = userService.getUserProfileById(id);
 
         List<AppRoleDto> userAppRoles = optionalUser.get().getAppRoles().stream()
                 .map(appRoleDto -> mapper.map(appRoleDto, AppRoleDto.class))
+                .sorted()
                 .collect(Collectors.toList());
         List<OfficeDto> userOffices = optionalUser.get().getOffices();
         final Boolean isAccessGranted = userService.isAccessGranted(optionalUser.get().getId().toString());
+        final Boolean canEditUser = accessControlService.canEditUser(optionalUser.get().getId().toString());
         optionalUser.ifPresent(user -> model.addAttribute("user", user));
         model.addAttribute("userAppRoles", userAppRoles);
         model.addAttribute("userOffices", userOffices);
         model.addAttribute("isAccessGranted", isAccessGranted);
-        boolean externalUser = UserType.EXTERNAL_TYPES.contains(optionalUser.get().getUserType());
+        boolean externalUser = UserType.EXTERNAL == optionalUser.get().getUserType();
         model.addAttribute("externalUser", externalUser);
+
+        // Check if current user can manage offices - align with actual endpoint authorization
+        boolean canManageOffices = externalUser
+                && accessControlService.authenticatedUserHasPermission(Permission.EDIT_USER_OFFICE)
+                && canEditUser;
+        model.addAttribute("showOfficesTab", canManageOffices);
+
+        model.addAttribute("canEditUser", canEditUser);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Manage user - " + optionalUser.get().getFullName());
+        boolean showResendVerificationLink = enableResendVerificationCode && accessControlService.canSendVerificationEmail(id);
+        model.addAttribute("showResendVerificationLink", showResendVerificationLink);
+
+        // Add filter state to model for "Back to search results" link
+        @SuppressWarnings("unchecked")
+        Map<String, Object> filters = (Map<String, Object>) session.getAttribute("userListFilters");
+        boolean hasFilters = filters != null && hasActiveFilters(filters);
+        model.addAttribute("hasFilters", hasFilters);
+
+        return "manage-user";
+    }
+
+    @GetMapping("/user/{id}/verify")
+    @PreAuthorize("@accessControlService.canSendVerificationEmail(#id)")
+    public String resendActivationCode(@PathVariable String id, Model model, HttpSession session) {
+        if (!enableResendVerificationCode) {
+            log.error("Resend activation code is disabled");
+            throw new AccessDeniedException("Resend verification is disabled.");
+        }
+
+        Optional<UserProfileDto> optionalUser = userService.getUserProfileById(id);
+
+        List<AppRoleDto> userAppRoles = optionalUser.get().getAppRoles().stream()
+                .map(appRoleDto -> mapper.map(appRoleDto, AppRoleDto.class))
+                .sorted()
+                .collect(Collectors.toList());
+        List<OfficeDto> userOffices = optionalUser.get().getOffices();
+        final Boolean isAccessGranted = userService.isAccessGranted(optionalUser.get().getId().toString());
+        final Boolean canEditUser = accessControlService.canEditUser(optionalUser.get().getId().toString());
+        optionalUser.ifPresent(user -> model.addAttribute("user", user));
+        model.addAttribute("userAppRoles", userAppRoles);
+        model.addAttribute("userOffices", userOffices);
+        model.addAttribute("isAccessGranted", isAccessGranted);
+        boolean externalUser = UserType.EXTERNAL == optionalUser.get().getUserType();
+        model.addAttribute("externalUser", externalUser);
+        boolean showOfficesTab = externalUser; // Hide for internal users, show for external users
+        model.addAttribute("showOfficesTab", showOfficesTab);
+
+        model.addAttribute("canEditUser", canEditUser);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Manage user - " + optionalUser.get().getFullName());
+        boolean showResendVerificationLink = enableResendVerificationCode && accessControlService.canSendVerificationEmail(id);
+        model.addAttribute("showResendVerificationLink", showResendVerificationLink);
+
+        // Add filter state to model for "Back to search results" link
+        @SuppressWarnings("unchecked")
+        Map<String, Object> filters = (Map<String, Object>) session.getAttribute("userListFilters");
+        boolean hasFilters = filters != null && hasActiveFilters(filters);
+        model.addAttribute("hasFilters", hasFilters);
+
+        try {
+            TechServicesApiResponse<SendUserVerificationEmailResponse> response = userService.sendVerificationEmail(id);
+            if (response.isSuccess()) {
+                model.addAttribute("successMessage", response.getData().getMessage());
+            } else {
+                model.addAttribute("errorMessage", response.getError().getMessage());
+            }
+        } catch (RuntimeException runtimeException) {
+            log.error("Error sending activation code for user profile: {}", id, runtimeException);
+            throw runtimeException;
+        }
+
         return "manage-user";
     }
 
@@ -208,7 +376,6 @@ public class UserController {
             user = new EntraUserDto();
         }
         UserType selectedUserType = (UserType) session.getAttribute("selectedUserType");
-        model.addAttribute("userTypes", List.of(UserType.EXTERNAL_SINGLE_FIRM_ADMIN, UserType.EXTERNAL_SINGLE_FIRM));
         model.addAttribute("selectedUserType", selectedUserType);
         // If user is already in session, populate the form with existing user details
         userDetailsForm = UserUtils.populateUserDetailsFormWithSession(userDetailsForm, user, session);
@@ -217,6 +384,7 @@ public class UserController {
 
         // Store the model in session to handle validation errors later
         session.setAttribute("createUserDetailsModel", model);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Add user details");
         return "add-user-details";
     }
 
@@ -234,15 +402,11 @@ public class UserController {
         if (userService.userExistsByEmail(userDetailsForm.getEmail())) {
             result.rejectValue("email", "error.email", "Email address already exists");
         }
-        // Set user details from the form
-        user.setFirstName(userDetailsForm.getFirstName());
-        user.setLastName(userDetailsForm.getLastName());
-        user.setFullName(userDetailsForm.getFirstName() + " " + userDetailsForm.getLastName());
-        user.setEmail(userDetailsForm.getEmail());
-        session.setAttribute("user", user);
 
-        // Add selected userType to session
-        session.setAttribute("selectedUserType", userDetailsForm.getUserType());
+        if (!emailValidationService.isValidEmailDomain(userDetailsForm.getEmail())) {
+            result.rejectValue("email", "email.invalidDomain",
+                    "The email address domain is not valid or cannot receive emails.");
+        }
 
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while creating user: {}", result.getAllErrors());
@@ -253,10 +417,17 @@ public class UserController {
             }
 
             model.addAttribute("userTypes", modelFromSession.getAttribute("userTypes"));
-            model.addAttribute("selectedUserType", userDetailsForm.getUserType());
             model.addAttribute("user", modelFromSession.getAttribute("user"));
             return "add-user-details";
         }
+
+        // Set user details from the form
+        user.setFirstName(userDetailsForm.getFirstName());
+        user.setLastName(userDetailsForm.getLastName());
+        user.setFullName(userDetailsForm.getFirstName() + " " + userDetailsForm.getLastName());
+        user.setEmail(userDetailsForm.getEmail());
+        session.setAttribute("user", user);
+        session.setAttribute("isUserManager", userDetailsForm.getUserManager());
 
         // Clear the createUserDetailsModel from session to avoid stale data
         session.removeAttribute("createUserDetailsModel");
@@ -269,10 +440,8 @@ public class UserController {
     }
 
     @GetMapping("/user/create/firm")
-    public String createUserFirm(FirmSearchForm firmSearchForm, HttpSession session, Model model) {
-        // Clear any previous firm selection
-        session.removeAttribute("firm");
-        session.removeAttribute("selectedFirm");
+    public String createUserFirm(FirmSearchForm firmSearchForm, HttpSession session, Model model,
+                                 @RequestParam(value = "firmSearchResultCount", defaultValue = "10") Integer count) {
 
         // If firmSearchForm is already populated from session (e.g., validation
         // errors), keep it
@@ -281,18 +450,22 @@ public class UserController {
             firmSearchForm = existingForm;
             session.removeAttribute("firmSearchForm");
         }
-
+        int validatedCount = Math.max(10, Math.min(count, 100));
         model.addAttribute("firmSearchForm", firmSearchForm);
+        model.addAttribute("firmSearchResultCount", validatedCount);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Select firm");
         return "add-user-firm";
     }
 
     @GetMapping("/user/create/firm/search")
     @ResponseBody
-    public List<Map<String, String>> searchFirms(@RequestParam(value = "q", defaultValue = "") String query) {
+    public List<Map<String, String>> searchFirms(@RequestParam(value = "q", defaultValue = "") String query,
+                                                 @RequestParam(value = "firmSearchResultCount", defaultValue = "10") Integer count) {
+        int validatedCount = Math.max(10, Math.min(count, 100));
         List<FirmDto> firms = firmService.searchFirms(query);
 
         List<Map<String, String>> result = firms.stream()
-                .limit(10) // Limit results to prevent overwhelming the UI
+                .limit(validatedCount) // Limit results to prevent overwhelming the UI
                 .map(firm -> {
                     Map<String, String> firmData = new HashMap<>();
                     firmData.put("id", firm.getId().toString());
@@ -314,12 +487,14 @@ public class UserController {
             session.setAttribute("firmSearchForm", firmSearchForm);
             return "add-user-firm";
         }
-
+        FirmDto savedFirm = (FirmDto) session.getAttribute("firm");
+        if (!Objects.isNull(savedFirm) && !savedFirm.getName().equals(firmSearchForm.getFirmSearch())) {
+            firmSearchForm.setSelectedFirmId(null);
+        }
         // Check if a specific firm was selected
-        if (firmSearchForm.getSelectedFirmId() != null && !firmSearchForm.getSelectedFirmId().isEmpty()) {
+        if (firmSearchForm.getSelectedFirmId() != null) {
             try {
-                UUID firmId = UUID.fromString(firmSearchForm.getSelectedFirmId());
-                FirmDto selectedFirm = firmService.getFirm(firmId.toString());
+                FirmDto selectedFirm = firmService.getFirm(firmSearchForm.getSelectedFirmId());
                 session.setAttribute("firm", selectedFirm);
             } catch (Exception e) {
                 log.error("Error retrieving selected firm: {}", e.getMessage());
@@ -339,195 +514,11 @@ public class UserController {
                         "No firm found with that name. Please select from the dropdown.");
                 return "add-user-firm";
             }
-
+            firmSearchForm.setFirmSearch(selectedFirm.getName());
+            firmSearchForm.setSelectedFirmId(selectedFirm.getId());
             session.setAttribute("firm", selectedFirm);
         }
-
-        session.setAttribute("firmSearchTerm", firmSearchForm.getFirmSearch());
-        return "redirect:/admin/user/create/check-answers";
-    }
-
-    @GetMapping("/user/create/services")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String selectUserApps(ApplicationsForm applicationsForm, Model model, HttpSession session) {
-        List<String> selectedApps = getListFromHttpSession(session, "apps", String.class).orElseGet(ArrayList::new);
-        // TODO: Make this use the selected user type rather than a hard-coded type. Our
-        // user creation flow is only for external users right now.
-        List<AppViewModel> apps = userService.getAppsByUserType(UserType.EXTERNAL_SINGLE_FIRM).stream()
-                .map(appDto -> {
-                    AppViewModel appViewModel = mapper.map(appDto, AppViewModel.class);
-                    appViewModel.setSelected(selectedApps.contains(appDto.getId()));
-                    return appViewModel;
-                }).toList();
-        model.addAttribute("apps", apps);
-        EntraUserDto user = getObjectFromHttpSession(session, "user", EntraUserDto.class)
-                .orElseThrow(CreateUserDetailsIncompleteException::new);
-        model.addAttribute("user", user);
-        return "add-user-apps";
-    }
-
-    @PostMapping("/user/create/services")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String setSelectedApps(ApplicationsForm applicationsForm, Model model,
-            HttpSession session) {
-        if (applicationsForm.getApps() == null || applicationsForm.getApps().isEmpty()) {
-            return "redirect:/admin/user/create/check-answers";
-        }
-        session.setAttribute("apps", applicationsForm.getApps());
-        session.removeAttribute("userCreateRolesModel");
-        return "redirect:/admin/user/create/roles";
-    }
-
-    @GetMapping("/user/create/roles")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String getSelectedRoles(RolesForm rolesForm, Authentication authentication, Model model, HttpSession session) {
-        List<String> selectedApps = getListFromHttpSession(session, "apps", String.class)
-                .orElseThrow(CreateUserDetailsIncompleteException::new);
-        Model modelFromSession = (Model) session.getAttribute("userCreateRolesModel");
-        Integer selectedAppIndex;
-        if (modelFromSession != null && modelFromSession.getAttribute("createUserRolesSelectedAppIndex") != null) {
-            selectedAppIndex = (Integer) modelFromSession.getAttribute("createUserRolesSelectedAppIndex");
-        } else {
-            selectedAppIndex = 0;
-        }
-        // TODO: Make this use the selected user type rather than a hard-coded type. Our
-        // user creation flow is only for external users right now.
-        List<AppRoleDto> roles = userService.getAppRolesByAppIdAndUserType(selectedApps.get(selectedAppIndex),
-                UserType.EXTERNAL_SINGLE_FIRM);
-        UserProfile editorProfile = loginService.getCurrentProfile(authentication);
-        roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(), roles);
-        List<String> selectedRoles = getListFromHttpSession(session, "roles", String.class).orElseGet(ArrayList::new);
-        AppDto currentApp = userService.getAppByAppId(selectedApps.get(selectedAppIndex)).orElseThrow();
-        List<AppRoleViewModel> appRoleViewModels = roles.stream()
-                .map(appRoleDto -> {
-                    AppRoleViewModel viewModel = mapper.map(appRoleDto, AppRoleViewModel.class);
-                    viewModel.setSelected(selectedRoles.contains(appRoleDto.getId()));
-                    return viewModel;
-                }).toList();
-        EntraUserDto user = getObjectFromHttpSession(session, "user", EntraUserDto.class)
-                .orElseThrow(CreateUserDetailsIncompleteException::new);
-        model.addAttribute("user", user);
-        model.addAttribute("roles", appRoleViewModels);
-        model.addAttribute("createUserRolesSelectedAppIndex", selectedAppIndex);
-        model.addAttribute("createUserRolesCurrentApp", currentApp);
-
-        // Store the model in session to handle validation errors later and track
-        // currently selected app.
-        session.setAttribute("userCreateRolesModel", model);
-        return "add-user-roles";
-    }
-
-    @PostMapping("/user/create/roles")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String setSelectedRoles(@Valid RolesForm rolesForm, BindingResult result,
-            Model model, HttpSession session) {
-        Model modelFromSession = (Model) session.getAttribute("userCreateRolesModel");
-        if (modelFromSession == null) {
-            return "redirect:/admin/user/create/roles";
-        }
-        if (result.hasErrors()) {
-            log.debug("Validation errors occurred while setting user roles: {}", result.getAllErrors());
-            // If there are validation errors, return to the roles page with errors
-            model.addAttribute("roles", modelFromSession.getAttribute("roles"));
-            model.addAttribute("user", modelFromSession.getAttribute("user"));
-            model.addAttribute("createUserRolesSelectedAppIndex",
-                    modelFromSession.getAttribute("createUserRolesSelectedAppIndex"));
-            model.addAttribute("createUserRolesCurrentApp", modelFromSession.getAttribute("createUserRolesCurrentApp"));
-
-            return "add-user-roles";
-        }
-        List<String> selectedApps = getListFromHttpSession(session, "apps", String.class).orElseGet(ArrayList::new);
-        @SuppressWarnings("unchecked")
-        Map<Integer, List<String>> allSelectedRolesByPage = (Map<Integer, List<String>>) session
-                .getAttribute("createUserAllSelectedRoles");
-        if (allSelectedRolesByPage == null) {
-            allSelectedRolesByPage = new HashMap<>();
-        }
-        int selectedAppIndex = (Integer) modelFromSession.getAttribute("createUserRolesSelectedAppIndex");
-
-        // Add the roles for the currently selected app to a map for lookup.
-        allSelectedRolesByPage.put(selectedAppIndex, rolesForm.getRoles());
-        if (selectedAppIndex >= selectedApps.size() - 1) {
-            // Clear the userCreateRolesModel and page roles from session to avoid stale
-            // data
-            session.removeAttribute("userCreateRolesModel");
-            session.removeAttribute("createUserAllSelectedRoles");
-            // Flatten the map to a single list of all selected roles across all pages.
-            List<String> allSelectedRoles = allSelectedRolesByPage.values().stream()
-                    .flatMap(List::stream)
-                    .toList();
-            // Set selected roles in session
-            session.setAttribute("roles", allSelectedRoles);
-            return "redirect:/admin/user/create/offices";
-        } else {
-            modelFromSession.addAttribute("createUserRolesSelectedAppIndex", selectedAppIndex + 1);
-            session.setAttribute("createUserAllSelectedRoles", allSelectedRolesByPage);
-            session.setAttribute("userCreateRolesModel", modelFromSession);
-            return "redirect:/admin/user/create/roles";
-        }
-
-    }
-
-    @GetMapping("/user/create/offices")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String offices(OfficesForm officesForm, HttpSession session, Model model) {
-        OfficeData selectedOfficeData = getObjectFromHttpSession(session, "officeData", OfficeData.class)
-                .orElseGet(OfficeData::new);
-        FirmDto selectedFirm = getObjectFromHttpSession(session, "firm", FirmDto.class)
-                .orElseThrow(CreateUserDetailsIncompleteException::new);
-        List<Office> offices = officeService.getOfficesByFirms(List.of(selectedFirm.getId()));
-        List<OfficeModel> officeData = offices.stream()
-                .map(office -> new OfficeModel(office.getCode(),
-                        new OfficeModel.Address(office.getAddress().getAddressLine1(),
-                                office.getAddress().getAddressLine2(), office.getAddress().getCity(),
-                                office.getAddress().getPostcode()),
-                        office.getId().toString(), Objects.nonNull(selectedOfficeData.getSelectedOffices())
-                                && selectedOfficeData.getSelectedOffices().contains(office.getId().toString())))
-                .collect(Collectors.toList());
-        model.addAttribute("officeData", officeData);
-        EntraUserDto user = getObjectFromHttpSession(session, "user", EntraUserDto.class)
-                .orElseThrow(CreateUserDetailsIncompleteException::new);
-        model.addAttribute("user", user);
-
-        // Store the model in session to handle validation errors later
-        session.setAttribute("createUserOfficesModel", model);
-        return "add-user-offices";
-    }
-
-    @PostMapping("/user/create/offices")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String postOffices(@Valid OfficesForm officesForm, BindingResult result, Model model, HttpSession session) {
-
-        if (result.hasErrors()) {
-            log.debug("Validation errors occurred while selecting offices: {}", result.getAllErrors());
-            // If there are validation errors, return to the offices page with errors
-            Model modelFromSession = (Model) session.getAttribute("createUserOfficesModel");
-            if (modelFromSession == null) {
-                return "redirect:/admin/user/create/offices";
-            }
-
-            model.addAttribute("user", modelFromSession.getAttribute("user"));
-            model.addAttribute("officeData", modelFromSession.getAttribute("officeData"));
-            return "add-user-offices";
-        }
-
-        OfficeData officeData = new OfficeData();
-        List<String> selectedOffices = officesForm.getOffices();
-        officeData.setSelectedOffices(officesForm.getOffices());
-        FirmDto selectedFirm = (FirmDto) session.getAttribute("firm");
-        List<Office> offices = officeService.getOfficesByFirms(List.of(selectedFirm.getId()));
-        List<String> selectedDisplayNames = new ArrayList<>();
-        for (Office office : offices) {
-            if (Objects.nonNull(selectedOffices)
-                    && selectedOffices.contains(office.getId().toString())) {
-                selectedDisplayNames.add(office.getCode());
-            }
-        }
-        officeData.setSelectedOfficesDisplay(selectedDisplayNames);
-        session.setAttribute("officeData", officeData);
-
-        // Clear the createUserOfficesModel from session to avoid stale data
-        session.removeAttribute("createUserOfficesModel");
+        session.setAttribute("firmSearchForm", firmSearchForm);
         return "redirect:/admin/user/create/check-answers";
     }
 
@@ -541,29 +532,43 @@ public class UserController {
         FirmDto selectedFirm = (FirmDto) session.getAttribute("firm");
         model.addAttribute("firm", selectedFirm);
 
-        UserType userType = (UserType) session.getAttribute("selectedUserType");
-        model.addAttribute("userType", userType);
+        boolean isUserManager = (boolean) session.getAttribute("isUserManager");
+        model.addAttribute("isUserManager", isUserManager);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Check your answers");
         return "add-user-check-answers";
     }
 
     @PostMapping("/user/create/check-answers")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).CREATE_EXTERNAL_USER)")
-    public String addUserCheckAnswers(HttpSession session, Authentication authentication) {
+    public String addUserCheckAnswers(HttpSession session, Authentication authentication, Model model) {
         Optional<EntraUserDto> userOptional = getObjectFromHttpSession(session, "user", EntraUserDto.class);
         Optional<FirmDto> firmOptional = Optional.ofNullable((FirmDto) session.getAttribute("firm"));
-        UserType userType = getObjectFromHttpSession(session, "selectedUserType", UserType.class).orElseThrow();
-
+        boolean userManager = getObjectFromHttpSession(session, "isUserManager", Boolean.class).orElseThrow();
         if (userOptional.isPresent()) {
             EntraUserDto user = userOptional.get();
             FirmDto selectedFirm = firmOptional.orElseGet(FirmDto::new);
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            EntraUser entraUser = userService.createUser(user, selectedFirm,
-                    userType, currentUserDto.getName());
-            session.setAttribute("userProfile",
-                    mapper.map(entraUser.getUserProfiles().stream().findFirst(), UserProfileDto.class));
-            CreateUserAuditEvent createUserAuditEvent = new CreateUserAuditEvent(currentUserDto, entraUser,
-                    selectedFirm.getName(), userType);
-            eventService.logEvent(createUserAuditEvent);
+            try {
+                EntraUser entraUser = userService.createUser(user, selectedFirm,
+                        userManager, currentUserDto.getName());
+                session.setAttribute("userProfile",
+                        mapper.map(entraUser.getUserProfiles().stream().findFirst(), UserProfileDto.class));
+                CreateUserAuditEvent createUserAuditEvent = new CreateUserAuditEvent(currentUserDto, entraUser,
+                        selectedFirm.getName(), userManager);
+                eventService.logEvent(createUserAuditEvent);
+            } catch (TechServicesClientException techServicesClientException) {
+                log.debug("Error creating user: {}", techServicesClientException.getMessage());
+                model.addAttribute("errorMessage", techServicesClientException.getMessage());
+                model.addAttribute("errors", techServicesClientException.getErrors());
+
+                model.addAttribute("user", user);
+                model.addAttribute("firm", selectedFirm);
+                boolean isUserManager = (boolean) session.getAttribute("isUserManager");
+                model.addAttribute("isUserManager", isUserManager);
+                model.addAttribute(ModelAttributes.PAGE_TITLE, "Check your answers");
+                return "add-user-check-answers";
+            }
+
         } else {
             log.error("No user attribute was present in request. User not created.");
         }
@@ -589,6 +594,7 @@ public class UserController {
         }
         session.removeAttribute("user");
         session.removeAttribute("userProfile");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "User created");
         return "add-user-created";
     }
 
@@ -596,7 +602,6 @@ public class UserController {
     public String cancelUserCreation(HttpSession session) {
         session.removeAttribute("user");
         session.removeAttribute("firm");
-        session.removeAttribute("selectedFirm");
         session.removeAttribute("selectedUserType");
         session.removeAttribute("isFirmAdmin");
         session.removeAttribute("apps");
@@ -618,15 +623,22 @@ public class UserController {
      */
 
     @GetMapping("/users/edit/{id}/details")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_DETAILS) && @accessControlService.canEditUser(#id)")
-    public String editUserDetails(@PathVariable String id, Model model) {
-        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
-        EditUserDetailsForm editUserDetailsForm = new EditUserDetailsForm();
-        editUserDetailsForm.setFirstName(user.getEntraUser().getFirstName());
-        editUserDetailsForm.setLastName(user.getEntraUser().getLastName());
-        editUserDetailsForm.setEmail(user.getEntraUser().getEmail());
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String editUserDetails(@PathVariable String id, Model model, HttpSession session) {
+        UserProfileDto user = (UserProfileDto) session.getAttribute("user");
+        if (Objects.isNull(user)) {
+            user = userService.getUserProfileById(id).orElseThrow();
+        }
+        EditUserDetailsForm editUserDetailsForm = (EditUserDetailsForm) session.getAttribute("editUserDetailsForm");
+        if (Objects.isNull(editUserDetailsForm)) {
+            editUserDetailsForm = new EditUserDetailsForm();
+            editUserDetailsForm.setFirstName(user.getEntraUser().getFirstName());
+            editUserDetailsForm.setLastName(user.getEntraUser().getLastName());
+            editUserDetailsForm.setEmail(user.getEntraUser().getEmail());
+        }
         model.addAttribute("editUserDetailsForm", editUserDetailsForm);
         model.addAttribute("user", user);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user details - " + user.getFullName());
         return "edit-user-details";
     }
 
@@ -642,22 +654,60 @@ public class UserController {
      * @throws IllegalArgumentException If the user ID is invalid or not found
      */
     @PostMapping("/users/edit/{id}/details")
-    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_DETAILS) && @accessControlService.canEditUser(#id)")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String updateUserDetails(@PathVariable String id,
             @Valid EditUserDetailsForm editUserDetailsForm, BindingResult result,
             HttpSession session) throws IOException {
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        session.setAttribute("user", user);
+        session.setAttribute("editUserDetailsForm", editUserDetailsForm);
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while updating user details: {}", result.getAllErrors());
             // If there are validation errors, return to the edit user details page with
             // errors
-            UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
-            session.setAttribute("user", user);
-            session.setAttribute("editUserDetailsForm", editUserDetailsForm);
             return "edit-user-details";
         }
+        return "redirect:/admin/users/edit/" + id + "/details-check-answer";
+    }
+
+    @GetMapping("/users/edit/{id}/details-check-answer")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String updateUserDetailsCheck(@PathVariable String id, Model model,
+                                          HttpSession session) throws IOException {
+        EditUserDetailsForm editUserDetailsForm = (EditUserDetailsForm) session.getAttribute("editUserDetailsForm");
+        if (Objects.isNull(editUserDetailsForm)) {
+            return "redirect:/admin/users/manage/" + id;
+        }
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        model.addAttribute("editUserDetailsForm", editUserDetailsForm);
+        model.addAttribute("user", user);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user details - Check your answers - " + user.getFullName());
+        return "edit-user-details-check-answer";
+    }
+
+    /**
+     * Update user details
+     *
+     * @param id                  User ID
+     * @param session             HttpSession to store user details
+     * @return Redirect to user management page
+     * @throws IOException              If an error occurs during user update
+     * @throws IllegalArgumentException If the user ID is invalid or not found
+     */
+    @PostMapping("/users/edit/{id}/details-check-answer")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String updateUserDetailsSubmit(@PathVariable String id,
+                                    HttpSession session) throws IOException {
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        EditUserDetailsForm editUserDetailsForm = (EditUserDetailsForm) session.getAttribute("editUserDetailsForm");
+        if (Objects.isNull(editUserDetailsForm)) {
+            return "redirect:/admin/users/manage/" + id;
+        }
         // Update user details
-        userService.updateUserDetails(id, editUserDetailsForm.getFirstName(), editUserDetailsForm.getLastName());
-        return "redirect:/admin/users/manage/" + id;
+        //TODO audit log needed
+        userService.updateUserDetails(user.getEntraUser().getId(), editUserDetailsForm.getFirstName(), editUserDetailsForm.getLastName());
+        session.removeAttribute("editUserDetailsForm");
+        return "redirect:/admin/users/edit/" + id + "/confirmation";
     }
 
     /**
@@ -665,21 +715,33 @@ public class UserController {
      */
     @GetMapping("/users/edit/{id}/apps")
     @PreAuthorize("@accessControlService.canEditUser(#id)")
-    public String editUserApps(@PathVariable String id, Model model) {
+    public String editUserApps(@PathVariable String id,
+                               @RequestParam(value = "errorMessage", required = false) String errorMessage,
+                               Model model, HttpSession session) {
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         UserType userType = user.getUserType();
         Set<AppDto> userAssignedApps = userService.getUserAppsByUserId(id);
         List<AppDto> availableApps = userService.getAppsByUserType(userType);
-
-        // Add selected attribute to available apps based on user assigned apps
-        availableApps.forEach(app -> {
-            app.setSelected(userAssignedApps.stream()
-                    .anyMatch(userApp -> userApp.getId().equals(app.getId())));
-        });
+        @SuppressWarnings("unchecked")
+        Map<Integer, List<String>> selectedAppRole = (Map<Integer, List<String>>) session.getAttribute("editUserAllSelectedRoles");
+        if (Objects.isNull(selectedAppRole)) {
+            // Add selected attribute to available apps based on user assigned apps
+            availableApps.forEach(app -> {
+                app.setSelected(userAssignedApps.stream()
+                        .anyMatch(userApp -> userApp.getId().equals(app.getId())));
+            });
+        } else {
+            availableApps.forEach(app -> {
+                app.setSelected(selectedAppRole.containsKey(app.getId()));
+            });
+        }
 
         model.addAttribute("user", user);
         model.addAttribute("apps", availableApps);
-
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user services - " + user.getFullName());
+        if (errorMessage != null) {
+            model.addAttribute("errorMessage", errorMessage);
+        }
         return "edit-user-apps";
     }
 
@@ -687,24 +749,15 @@ public class UserController {
     @PreAuthorize("@accessControlService.canEditUser(#id)")
     public RedirectView setSelectedAppsEdit(@PathVariable String id,
             @RequestParam(value = "apps", required = false) List<String> apps,
-            Authentication authentication,
             HttpSession session) {
         // Handle case where no apps are selected (apps will be null)
         List<String> selectedApps = apps != null ? apps : new ArrayList<>();
         session.setAttribute("selectedApps", selectedApps);
-
         if (selectedApps.isEmpty()) {
-            // Update user to have no roles (empty list)
-            userService.updateUserRoles(id, new ArrayList<>());
-            UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
-            CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(currentUserDto,
-                    userProfileDto != null ? userProfileDto.getEntraUser() : null,
-                    List.of(), "apps");
-            eventService.logEvent(updateUserAuditEvent);
             // Ensure passed in ID is a valid UUID to avoid open redirects.
+            session.setAttribute("editUserAllSelectedRoles", new HashMap<>());
             UUID uuid = UUID.fromString(id);
-            return new RedirectView(String.format("/admin/users/manage/%s", uuid));
+            return new RedirectView(String.format("/admin/users/edit/%s/roles-check-answer", uuid));
         }
 
         // Ensure passed in ID is a valid UUID to avoid open redirects.
@@ -728,6 +781,7 @@ public class UserController {
     public String editUserRoles(@PathVariable String id,
             @RequestParam(defaultValue = "0") Integer selectedAppIndex,
             RolesForm rolesForm,
+            @RequestParam(value = "errorMessage", required = false) String errorMessage,
             Authentication authentication,
             Model model, HttpSession session) {
 
@@ -749,13 +803,7 @@ public class UserController {
             return "redirect:/admin/users/manage/" + id;
         }
 
-        Model modelFromSession = (Model) session.getAttribute("userEditRolesModel");
-        Integer currentSelectedAppIndex;
-        if (modelFromSession != null && modelFromSession.getAttribute("editUserRolesSelectedAppIndex") != null) {
-            currentSelectedAppIndex = (Integer) modelFromSession.getAttribute("editUserRolesSelectedAppIndex");
-        } else {
-            currentSelectedAppIndex = selectedAppIndex != null ? selectedAppIndex : 0;
-        }
+        Integer currentSelectedAppIndex = selectedAppIndex != null ? selectedAppIndex : 0;
 
         // Ensure the index is within bounds
         if (currentSelectedAppIndex >= selectedApps.size()) {
@@ -767,9 +815,18 @@ public class UserController {
         UserProfile editorProfile = loginService.getCurrentProfile(authentication);
         roles = roleAssignmentService.filterRoles(editorProfile.getAppRoles(), roles);
         List<AppRoleDto> userRoles = userService.getUserAppRolesByUserId(id);
+        @SuppressWarnings("unchecked")
+        Map<Integer, List<String>> editUserAllSelectedRoles = (Map<Integer, List<String>>) session.getAttribute("editUserAllSelectedRoles");
+        if (Objects.isNull(editUserAllSelectedRoles)) {
+            editUserAllSelectedRoles = new HashMap<>();
+        }
         // Get currently selected roles from session or use user's existing roles
-        List<String> selectedRoles = getListFromHttpSession(session, "editUserRoles", String.class)
-                .orElseGet(() -> userRoles.stream().map(AppRoleDto::getId).collect(Collectors.toList()));
+        List<String> selectedRoles;
+        if (editUserAllSelectedRoles.get(selectedAppIndex) != null) {
+            selectedRoles = editUserAllSelectedRoles.get(selectedAppIndex);
+        } else {
+            selectedRoles = userRoles.stream().map(AppRoleDto::getId).collect(Collectors.toList());
+        }
         AppDto currentApp = userService.getAppByAppId(selectedApps.get(currentSelectedAppIndex)).orElseThrow();
 
         List<AppRoleViewModel> appRoleViewModels = roles.stream()
@@ -777,16 +834,39 @@ public class UserController {
                     AppRoleViewModel viewModel = mapper.map(appRoleDto, AppRoleViewModel.class);
                     viewModel.setSelected(selectedRoles.contains(appRoleDto.getId()));
                     return viewModel;
-                }).toList();
+                }).sorted().toList();
+
+        // Check if this is the CCMS app and organize roles by section
+        boolean isCcmsApp = (currentApp.getName().contains("CCMS")
+                && !currentApp.getName().contains("CCMS case transfer requests"))
+                || roles.stream().anyMatch(role -> CcmsRoleGroupsUtil.isCcmsRole(role.getCcmsCode()));
+
+        if (isCcmsApp) {
+            // Filter to only CCMS roles for organization
+            List<AppRoleDto> ccmsRoles = roles.stream()
+                    .filter(role -> CcmsRoleGroupsUtil.isCcmsRole(role.getCcmsCode()))
+                    .sorted().collect(Collectors.toList());
+
+            Map<String, List<AppRoleDto>> organizedRoles = new HashMap<>();
+            if (!ccmsRoles.isEmpty()) {
+                // Organize CCMS roles by section dynamically
+                organizedRoles.putAll(CcmsRoleGroupsUtil.organizeCcmsRolesBySection(ccmsRoles));
+            }
+            model.addAttribute("ccmsRolesBySection", organizedRoles);
+            model.addAttribute("isCcmsApp", true);
+        } else {
+            model.addAttribute("isCcmsApp", false);
+        }
 
         model.addAttribute("user", user);
         model.addAttribute("roles", appRoleViewModels);
         model.addAttribute("editUserRolesSelectedAppIndex", currentSelectedAppIndex);
         model.addAttribute("editUserRolesCurrentApp", currentApp);
 
-        // Store the model in session to handle validation errors later and track
-        // currently selected app.
-        session.setAttribute("userEditRolesModel", model);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user roles - " + user.getFullName());
+        if (errorMessage != null) {
+            model.addAttribute("errorMessage", errorMessage);
+        }
         return "edit-user-roles";
     }
 
@@ -795,7 +875,6 @@ public class UserController {
      * 
      * @param id               User ID
      * @param selectedAppIndex Index of the currently selected app
-     * @param authentication   Authentication object for the current user
      * @param session          HttpSession to store selected apps and roles
      * @return Redirect view to the user management page or next app roles page
      * @throws IllegalArgumentException If the user ID is invalid or not found
@@ -806,39 +885,8 @@ public class UserController {
     public String updateUserRoles(@PathVariable String id,
             @Valid RolesForm rolesForm, BindingResult result,
             @RequestParam int selectedAppIndex,
-            Authentication authentication,
-            Model model, HttpSession session) {
-        Model modelFromSession = (Model) session.getAttribute("userEditRolesModel");
-        if (modelFromSession == null) {
-            return "redirect:/admin/users/edit/" + id + "/roles";
-        }
-        if (result.hasErrors()) {
-            log.debug("Validation errors occurred while setting user roles: {}", result.getAllErrors());
-            // If there are validation errors, return to the roles page with errors
-            // and role unseleected if it is not in the list
-            @SuppressWarnings("unchecked")
-            List<AppRoleViewModel> roles = (List<AppRoleViewModel>) modelFromSession.getAttribute("roles");
-            if (roles != null) {
-                // Add null check for rolesForm.getRoles()
-                List<String> selectedRoleIds = rolesForm.getRoles() != null ? rolesForm.getRoles() : new ArrayList<>();
-                roles.forEach(role -> {
-                    if (!selectedRoleIds.contains(role.getId())) {
-                        role.setSelected(false);
-                    }
-                });
-            }
-            model.addAttribute("roles", roles);
-            model.addAttribute("user", modelFromSession.getAttribute("user"));
-            model.addAttribute("editUserRolesSelectedAppIndex",
-                    modelFromSession.getAttribute("editUserRolesSelectedAppIndex"));
-            model.addAttribute("editUserRolesCurrentApp", modelFromSession.getAttribute("editUserRolesCurrentApp"));
+            HttpSession session) {
 
-            return "edit-user-roles";
-        }
-
-        UserProfileDto user = userService.getUserProfileById(id).orElse(null);
-        List<String> selectedApps = getListFromHttpSession(session, "selectedApps", String.class)
-                .orElseGet(ArrayList::new);
         @SuppressWarnings("unchecked")
         Map<Integer, List<String>> allSelectedRolesByPage = (Map<Integer, List<String>>) session
                 .getAttribute("editUserAllSelectedRoles");
@@ -846,33 +894,122 @@ public class UserController {
             allSelectedRolesByPage = new HashMap<>();
         }
         // Add the roles for the currently selected app to a map for lookup.
-        allSelectedRolesByPage.put(selectedAppIndex, rolesForm.getRoles());
-        if (selectedAppIndex >= selectedApps.size() - 1) {
-            // Clear the userEditRolesModel and page roles from session to avoid stale data
-            session.removeAttribute("userEditRolesModel");
-            session.removeAttribute("editUserAllSelectedRoles");
-            // Flatten the map to a single list of all selected roles across all pages.
-            List<String> allSelectedRoles = allSelectedRolesByPage.values().stream()
-                    .flatMap(List::stream)
-                    .toList();
-            CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            UserProfile editorProfile = loginService.getCurrentProfile(authentication);
-            if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
-                userService.updateUserRoles(id, allSelectedRoles);
-                UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(currentUserDto,
-                        user != null ? user.getEntraUser() : null, allSelectedRoles,
-                        "role");
-                eventService.logEvent(updateUserAuditEvent);
-            }
-            return "redirect:/admin/users/manage/" + id;
+        if (rolesForm.getRoles() != null) {
+            allSelectedRolesByPage.put(selectedAppIndex, rolesForm.getRoles());
         } else {
-            modelFromSession.addAttribute("editUserRolesSelectedAppIndex", selectedAppIndex + 1);
-            session.setAttribute("editUserAllSelectedRoles", allSelectedRolesByPage);
-            session.setAttribute("userEditRolesModel", modelFromSession);
-            // Ensure passed in ID is a valid UUID to avoid open redirects.
-            UUID uuid = UUID.fromString(id);
+            allSelectedRolesByPage.put(selectedAppIndex, new ArrayList<>());
+        }
+        session.setAttribute("editUserAllSelectedRoles", allSelectedRolesByPage);
+        List<String> selectedApps = getListFromHttpSession(session, "selectedApps", String.class)
+                .orElseGet(ArrayList::new);
+        // Ensure passed in ID is a valid UUID to avoid open redirects.
+        UUID uuid = UUID.fromString(id);
+        if (selectedAppIndex >= selectedApps.size() - 1) {
+            return "redirect:/admin/users/edit/" + uuid + "/roles-check-answer";
+        } else {
             return "redirect:/admin/users/edit/" + uuid + "/roles?selectedAppIndex=" + (selectedAppIndex + 1);
         }
+    }
+
+    @GetMapping("/users/edit/{id}/roles-check-answer")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String editUserRolesCheckAnswer(@PathVariable String id,
+                                           @RequestParam(value = "errorMessage", required = false) String errorMessage,
+                                           Model model, HttpSession session) {
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        @SuppressWarnings("unchecked")
+        Map<Integer, List<String>> editUserAllSelectedRoles = (Map<Integer, List<String>>) session
+                .getAttribute("editUserAllSelectedRoles");
+        if (editUserAllSelectedRoles == null) {
+            return "redirect:/admin/users/manage/" + id;
+        }
+        UserType userType = user.getUserType();
+        List<String> selectedApps = getListFromHttpSession(session, "selectedApps", String.class)
+                .orElseGet(ArrayList::new);
+        Map<String, AppDto> availableApps = userService.getAppsByUserType(userType).stream()
+                .filter(app -> selectedApps.contains(app.getId()))
+                .collect(Collectors.toMap(AppDto::getId, Function.identity()));
+
+        List<UUID> roleIds = editUserAllSelectedRoles.values()
+                .stream()
+                .flatMap(List::stream)
+                .map(UUID::fromString)
+                .toList();
+        Map<String, AppRoleDto> roles = userService.getRolesByIdIn(roleIds);
+        String backUrl = "";
+        List<UserRole> selectedAppRole = new ArrayList<>();
+        if (editUserAllSelectedRoles.isEmpty()) {
+            backUrl = "/admin/users/edit/" + id + "/apps";
+        } else {
+            int size = editUserAllSelectedRoles.size();
+            backUrl = "/admin/users/edit/" + id + "/roles?selectedAppIndex=" + size;
+            for (Integer key : editUserAllSelectedRoles.keySet()) {
+                String url = "/admin/users/edit/" + id + "/roles?selectedAppIndex=" + key;
+                if (Objects.nonNull(editUserAllSelectedRoles.get(key))
+                        && !editUserAllSelectedRoles.get(key).isEmpty()) {
+                    List<String> selectedRoles = editUserAllSelectedRoles.get(key);
+                    for (String selectedRole : selectedRoles) {
+                        AppRoleDto role = roles.get(selectedRole);
+                        UserRole userRole = new UserRole();
+                        userRole.setRoleName(role.getName());
+                        userRole.setAppName(role.getApp().getName());
+                        userRole.setUrl(url);
+                        selectedAppRole.add(userRole);
+                    }
+                } else {
+                    UserRole userRole = new UserRole();
+                    userRole.setAppName(availableApps.get(selectedApps.get(key)).getName());
+                    userRole.setRoleName("No Role selected");
+                    userRole.setUrl(url);
+                    selectedAppRole.add(userRole);
+                }
+            }
+        }
+        if (errorMessage != null) {
+            model.addAttribute("errorMessage", errorMessage);
+        }
+        model.addAttribute("user", user);
+        model.addAttribute("selectedAppRole", selectedAppRole);
+        model.addAttribute("backUrl", backUrl);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user services - " + user.getFullName());
+        return "edit-user-roles-check-answer";
+    }
+
+    @PostMapping("/users/edit/{id}/roles-check-answer")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String editUserRolesCheckAnswerSubmit(@PathVariable String id, HttpSession session,
+                                                 Authentication authentication) {
+        UUID uuid = UUID.fromString(id);
+
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        @SuppressWarnings("unchecked")
+        Map<Integer, List<String>> allSelectedRolesByPage = (Map<Integer, List<String>>) session
+                .getAttribute("editUserAllSelectedRoles");
+        if (allSelectedRolesByPage == null) {
+            return "redirect:/admin/users/manage/" + id;
+        }
+        List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
+                .flatMap(List::stream)
+                .toList();
+        CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
+        UserProfile editorProfile = loginService.getCurrentProfile(authentication);
+        if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
+            Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, currentUserDto.getUserId());
+            if (updateResult.get("error") != null) {
+                String errorMessage = updateResult.get("error");
+                return "redirect:/admin/users/edit/" + uuid + "/roles-check-answer?errorMessage=" + errorMessage;
+            }
+            UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
+                    editorProfile.getId(),
+                    currentUserDto,
+                    user.getEntraUser(), updateResult.get("diff"),
+                    "role");
+            eventService.logEvent(updateUserAuditEvent);
+        }
+        // Clear the session
+        session.removeAttribute("editUserAllSelectedRoles");
+        session.removeAttribute("selectedApps");
+        return "redirect:/admin/users/edit/" + id + "/confirmation";
     }
 
     /**
@@ -887,7 +1024,7 @@ public class UserController {
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
     public String editUserOffices(@PathVariable String id, Model model, HttpSession session) {
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
-
+        session.removeAttribute("editUserOfficesModel");
         // Get user's current offices
         List<OfficeDto> userOffices = userService.getUserOfficesByUserId(id);
         Set<String> userOfficeIds = userOffices.stream()
@@ -900,10 +1037,30 @@ public class UserController {
         List<Office> allOffices = officeService.getOfficesByFirms(firmIds);
 
         // Check if user has access to all offices
-        boolean hasAllOffices = userOffices.size() == allOffices.size()
-                && allOffices.stream()
-                        .allMatch(office -> userOfficeIds.contains(office.getId().toString()));
+        boolean hasAllOffices = userOffices.isEmpty();
 
+        // Create form object or load from session if exist
+        OfficesForm officesForm = (OfficesForm) session.getAttribute("officesForm");
+        if (officesForm == null) {
+            officesForm = new OfficesForm();
+            List<String> selectedOffices = new ArrayList<>();
+            if (hasAllOffices) {
+                selectedOffices.add("ALL");
+            } else {
+                selectedOffices.addAll(userOfficeIds);
+            }
+            officesForm.setOffices(selectedOffices);
+        } else {
+            if (officesForm.getOffices() != null) {
+                if (officesForm.getOffices().contains("ALL")) {
+                    hasAllOffices = true;
+                } else {
+                    hasAllOffices = false;
+                    userOfficeIds = new HashSet<String>(officesForm.getOffices());
+                }
+            }
+        }
+        Set<String> finalUserOfficeIds = userOfficeIds;
         final List<OfficeModel> officeData = allOffices.stream()
                 .map(office -> new OfficeModel(
                         office.getCode(),
@@ -911,20 +1068,8 @@ public class UserController {
                                 office.getAddress().getAddressLine2(),
                                 office.getAddress().getCity(), office.getAddress().getPostcode()),
                         office.getId().toString(),
-                        userOfficeIds.contains(office.getId().toString())))
+                        finalUserOfficeIds.contains(office.getId().toString())))
                 .collect(Collectors.toList());
-
-        // Create form object
-        OfficesForm officesForm = new OfficesForm();
-        List<String> selectedOffices = new ArrayList<>();
-
-        if (hasAllOffices) {
-            selectedOffices.add("ALL");
-        } else {
-            selectedOffices.addAll(userOfficeIds);
-        }
-
-        officesForm.setOffices(selectedOffices);
 
         model.addAttribute("user", user);
         model.addAttribute("officesForm", officesForm);
@@ -933,6 +1078,7 @@ public class UserController {
 
         // Store the model in session to handle validation errors later
         session.setAttribute("editUserOfficesModel", model);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Edit user offices - " + user.getFullName());
         return "edit-user-offices";
     }
 
@@ -951,8 +1097,7 @@ public class UserController {
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
     public String updateUserOffices(@PathVariable String id,
             @Valid OfficesForm officesForm, BindingResult result,
-            Authentication authentication,
-            Model model, HttpSession session) throws IOException {
+            Model model, HttpSession session) {
         if (result.hasErrors()) {
             log.debug("Validation errors occurred while updating user offices: {}", result.getAllErrors());
             // If there are validation errors, return to the edit user offices page with
@@ -979,13 +1124,22 @@ public class UserController {
             model.addAttribute("officeData", modelFromSession.getAttribute("officeData"));
             return "edit-user-offices";
         }
+        session.setAttribute("officesForm", officesForm);
+        return "redirect:/admin/users/edit/" + id + "/offices-check-answer";
+    }
 
+    @GetMapping("/users/edit/{id}/offices-check-answer")
+    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
+    public String updateUserOfficesCheck(@PathVariable String id,
+                                    Model model, HttpSession session) {
+        OfficesForm officesForm = (OfficesForm) session.getAttribute("officesForm");
+        if (officesForm == null) {
+            return "redirect:/admin/users/edit/" + id + "/offices";
+        }
         // Update user offices
         List<String> selectedOffices = officesForm.getOffices() != null ? officesForm.getOffices() : new ArrayList<>();
-        List<String> selectOfficesDisplay = new ArrayList<>();
-        // Handle "ALL" option
+        List<OfficeModel> selectOfficesDisplay = new ArrayList<>();
         if (!selectedOffices.contains("ALL")) {
-            // If "ALL" is selected, get all available offices by firm
             Model modelFromSession = (Model) session.getAttribute("editUserOfficesModel");
             if (modelFromSession != null) {
                 @SuppressWarnings("unchecked")
@@ -995,24 +1149,55 @@ public class UserController {
                             : new ArrayList<>();
                     for (OfficeModel office : officeData) {
                         if (selectedOfficeIds.contains(office.getId())) {
-                            selectOfficesDisplay.add(office.getCode());
+                            selectOfficesDisplay.add(office);
                         }
                     }
                 }
             }
         }
+        Model modelFromSession = (Model) session.getAttribute("editUserOfficesModel");
+        model.addAttribute("userOffices", selectOfficesDisplay);
+        model.addAttribute("user", modelFromSession.getAttribute("user"));
+        return "edit-user-offices-check-answer";
+    }
 
-        userService.updateUserOffices(id, selectedOffices);
+    @PostMapping("/users/edit/{id}/offices-check-answer")
+    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
+    public String updateUserOfficesSubmit(@PathVariable String id,
+                                    Authentication authentication,
+                                    HttpSession session) throws IOException {
+        OfficesForm officesForm = (OfficesForm) session.getAttribute("officesForm");
+        if (officesForm == null) {
+            return "redirect:/admin/users/edit/" + id + "/offices";
+        }
+        // Update user offices
+        UserProfileDto userProfileDto = userService.getUserProfileById(id).orElseThrow();
+        List<String> selectedOffices = officesForm.getOffices() != null ? officesForm.getOffices() : new ArrayList<>();
+
+        String changed = userService.updateUserOffices(id, selectedOffices);
         CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-        UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
-        UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(currentUserDto,
-                userProfileDto != null ? userProfileDto.getEntraUser() : null,
-                selectOfficesDisplay, "office");
+        UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
+                userProfileDto.getId(),
+                currentUserDto,
+                userProfileDto.getEntraUser(),
+                changed, "office");
         eventService.logEvent(updateUserAuditEvent);
         // Clear the session model
         session.removeAttribute("editUserOfficesModel");
+        session.removeAttribute("officesForm");
+        return "redirect:/admin/users/edit/" + id + "/confirmation";
+    }
 
-        return "redirect:/admin/users/manage/" + id;
+    /**
+     * Update user detail Flow - Show confirmation page
+     */
+    @GetMapping("/users/edit/{id}/confirmation")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
+    public String editUserConfirmation(@PathVariable String id, Model model) {
+        UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
+        model.addAttribute("user", user);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "User updated - " + user.getFullName());
+        return "edit-user-confirmation";
     }
 
     @GetMapping("/users/edit/{id}/cancel")
@@ -1025,20 +1210,12 @@ public class UserController {
         // Edit User Apps/Roles Form
         session.removeAttribute("selectedApps");
         session.removeAttribute("editUserAllSelectedRoles");
-        session.removeAttribute("userEditRolesModel");
-        session.removeAttribute("editUserRoles");
-        session.removeAttribute("availableRoles");
-        session.removeAttribute("userAssignedRoles");
-        session.removeAttribute("selectedAppIndex");
-        session.removeAttribute("editUserRolesCurrentApp");
-        session.removeAttribute("editUserRolesSelectedAppIndex");
 
         // Edit User Apps Form
-        session.removeAttribute("userAssignedApps");
-        session.removeAttribute("availableApps");
 
         // Edit User Offices Form
         session.removeAttribute("editUserOfficesModel");
+        session.removeAttribute("officesForm");
 
         // Clear any success messages
         session.removeAttribute("successMessage");
@@ -1050,6 +1227,7 @@ public class UserController {
      * Grant access to a user by updating their profile status to COMPLETE
      */
     @PostMapping("/users/manage/{id}/grant-access")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantUserAccess(@PathVariable String id) {
         return "redirect:/admin/users/grant-access/" + id + "/apps";
     }
@@ -1059,6 +1237,7 @@ public class UserController {
      * assigned apps.
      */
     @GetMapping("/users/grant-access/{id}/apps")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessEditUserApps(@PathVariable String id, ApplicationsForm applicationsForm, Model model,
             HttpSession session) {
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
@@ -1077,10 +1256,12 @@ public class UserController {
 
         // Store the model in session to handle validation errors later
         session.setAttribute("grantAccessUserAppsModel", model);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Grant access - Select services - " + user.getFullName());
         return "grant-access-user-apps";
     }
 
     @PostMapping("/users/grant-access/{id}/apps")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessSetSelectedApps(@PathVariable String id,
             @Valid ApplicationsForm applicationsForm, BindingResult result,
             Authentication authentication,
@@ -1111,12 +1292,14 @@ public class UserController {
         // manage user page
         if (selectedApps.isEmpty()) {
             // Update user to have no roles (empty list)
-            userService.updateUserRoles(id, new ArrayList<>());
-            UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
-            UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(currentUserDto,
+            Map<String, String> updateResult = userService.updateUserRoles(id, new ArrayList<>(), currentUserDto.getUserId());
+            UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
+            UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
+                    userProfileDto != null ? userProfileDto.getId() : null,
+                    currentUserDto,
                     userProfileDto != null ? userProfileDto.getEntraUser() : null,
-                    List.of(), "apps");
+                    updateResult.get("diff"), "roles");
             eventService.logEvent(updateUserAuditEvent);
             // Ensure passed in ID is a valid UUID to avoid open redirects.
             UUID uuid = UUID.fromString(id);
@@ -1133,6 +1316,7 @@ public class UserController {
      * assigned roles.
      */
     @GetMapping("/users/grant-access/{id}/roles")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessEditUserRoles(@PathVariable String id,
             @RequestParam(defaultValue = "0") Integer selectedAppIndex,
             RolesForm rolesForm,
@@ -1186,7 +1370,28 @@ public class UserController {
                     AppRoleViewModel viewModel = mapper.map(appRoleDto, AppRoleViewModel.class);
                     viewModel.setSelected(selectedRoles.contains(appRoleDto.getId()));
                     return viewModel;
-                }).toList();
+                }).sorted().toList();
+
+        // Check if this is the CCMS app and organize roles by section
+        boolean isCcmsApp = (currentApp.getName().contains("CCMS")
+                && !currentApp.getName().contains("CCMS case transfer requests"))
+                || roles.stream().anyMatch(role -> CcmsRoleGroupsUtil.isCcmsRole(role.getCcmsCode()));
+
+        if (isCcmsApp) {
+            // Filter to only CCMS roles for organization
+            List<AppRoleDto> ccmsRoles = roles.stream()
+                    .filter(role -> CcmsRoleGroupsUtil.isCcmsRole(role.getCcmsCode()))
+                    .sorted().collect(Collectors.toList());
+
+            if (!ccmsRoles.isEmpty()) {
+                // Organize CCMS roles by section dynamically
+                Map<String, List<AppRoleDto>> organizedRoles = CcmsRoleGroupsUtil.organizeCcmsRolesBySection(ccmsRoles);
+                model.addAttribute("ccmsRolesBySection", organizedRoles);
+            }
+            model.addAttribute("isCcmsApp", true);
+        } else {
+            model.addAttribute("isCcmsApp", false);
+        }
 
         model.addAttribute("user", user);
         model.addAttribute("roles", appRoleViewModels);
@@ -1196,6 +1401,7 @@ public class UserController {
         // Store the model in session to handle validation errors later and track
         // currently selected app.
         session.setAttribute("grantAccessUserRolesModel", model);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Grant access - Select roles - " + user.getFullName());
         return "grant-access-user-roles";
     }
 
@@ -1203,6 +1409,7 @@ public class UserController {
      * Grant Access Flow - Update user roles for a specific app.
      */
     @PostMapping("/users/grant-access/{id}/roles")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessUpdateUserRoles(@PathVariable String id,
             @Valid RolesForm rolesForm, BindingResult result,
             @RequestParam int selectedAppIndex,
@@ -1251,15 +1458,17 @@ public class UserController {
             session.removeAttribute("grantAccessUserRolesModel");
             session.removeAttribute("grantAccessAllSelectedRoles");
             // Flatten the map to a single list of all selected roles across all pages.
-            List<String> allSelectedRoles = allSelectedRolesByPage.values().stream()
+            List<String> allSelectedRoles = allSelectedRolesByPage.values().stream().filter(Objects::nonNull)
                     .flatMap(List::stream)
                     .toList();
             CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
             UserProfile editorProfile = loginService.getCurrentProfile(authentication);
             if (roleAssignmentService.canAssignRole(editorProfile.getAppRoles(), allSelectedRoles)) {
-                userService.updateUserRoles(id, allSelectedRoles);
-                UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(currentUserDto,
-                        user != null ? user.getEntraUser() : null, allSelectedRoles,
+                Map<String, String> updateResult = userService.updateUserRoles(id, allSelectedRoles, currentUserDto.getUserId());
+                UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
+                        editorProfile.getId(),
+                        currentUserDto,
+                        user != null ? user.getEntraUser() : null, updateResult.get("diff"),
                         "role");
                 eventService.logEvent(updateUserAuditEvent);
             }
@@ -1278,6 +1487,7 @@ public class UserController {
      * Grant Access Flow - Get user offices for editing
      */
     @GetMapping("/users/grant-access/{id}/offices")
+    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
     public String grantAccessEditUserOffices(@PathVariable String id, Model model, HttpSession session) {
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
 
@@ -1293,9 +1503,7 @@ public class UserController {
         List<Office> allOffices = officeService.getOfficesByFirms(firmIds);
 
         // Check if user has access to all offices
-        boolean hasAllOffices = userOffices.size() == allOffices.size()
-                && allOffices.stream()
-                        .allMatch(office -> userOfficeIds.contains(office.getId().toString()));
+        boolean hasAllOffices = userOffices.isEmpty();
 
         final List<OfficeModel> officeData = allOffices.stream()
                 .map(office -> new OfficeModel(
@@ -1326,6 +1534,7 @@ public class UserController {
 
         // Store the model in session to handle validation errors later
         session.setAttribute("grantAccessUserOfficesModel", model);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Grant access - Select offices - " + user.getFullName());
         return "grant-access-user-offices";
     }
 
@@ -1333,6 +1542,7 @@ public class UserController {
      * Grant Access Flow - Update user offices
      */
     @PostMapping("/users/grant-access/{id}/offices")
+    @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_USER_OFFICE) && @accessControlService.canEditUser(#id)")
     public String grantAccessUpdateUserOffices(@PathVariable String id,
             @Valid OfficesForm officesForm, BindingResult result,
             Authentication authentication,
@@ -1385,12 +1595,14 @@ public class UserController {
             }
         }
 
-        userService.updateUserOffices(id, selectedOffices);
+        String changed = userService.updateUserOffices(id, selectedOffices);
         CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
         UserProfileDto userProfileDto = userService.getUserProfileById(id).orElse(null);
-        UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(currentUserDto,
+        UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
+                userProfileDto != null ? userProfileDto.getId() : null,
+                currentUserDto,
                 userProfileDto != null ? userProfileDto.getEntraUser() : null,
-                selectOfficesDisplay, "office");
+                changed, "office");
         eventService.logEvent(updateUserAuditEvent);
 
         // Clear grant access session data
@@ -1407,6 +1619,7 @@ public class UserController {
      * Grant Access Flow - Check answers page
      */
     @GetMapping("/users/grant-access/{id}/check-answers")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessCheckAnswers(@PathVariable String id, Model model) {
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
 
@@ -1414,7 +1627,7 @@ public class UserController {
         List<AppRoleDto> userAppRoles = userService.getUserAppRolesByUserId(id);
 
         // Group roles by app name and sort by app name
-        Map<String, List<AppRoleDto>> groupedAppRoles = userAppRoles.stream()
+        Map<String, List<AppRoleDto>> groupedAppRoles = userAppRoles.stream().sorted()
                 .collect(Collectors.groupingBy(
                         appRole -> appRole.getApp().getName(),
                         LinkedHashMap::new, // Preserve insertion order
@@ -1422,7 +1635,6 @@ public class UserController {
 
         // Sort the map by app name
         Map<String, List<AppRoleDto>> sortedGroupedAppRoles = groupedAppRoles.entrySet().stream()
-                .sorted(Map.Entry.comparingByKey())
                 .collect(Collectors.toMap(
                         Map.Entry::getKey,
                         Map.Entry::getValue,
@@ -1436,7 +1648,8 @@ public class UserController {
         model.addAttribute("userAppRoles", userAppRoles);
         model.addAttribute("groupedAppRoles", sortedGroupedAppRoles);
         model.addAttribute("userOffices", userOffices);
-        model.addAttribute("externalUser", UserType.EXTERNAL_TYPES.contains(user.getUserType()));
+        model.addAttribute("externalUser", user.getUserType() == UserType.EXTERNAL);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Grant access - Check your answers - " + user.getFullName());
 
         return "grant-access-check-answers";
     }
@@ -1445,6 +1658,7 @@ public class UserController {
      * Grant Access Flow - Remove an app role from user
      */
     @GetMapping("/users/grant-access/{userId}/remove-app-role/{appId}/{roleName}")
+    @PreAuthorize("@accessControlService.canEditUser(#userId)")
     public String removeAppRole(@PathVariable String userId, @PathVariable String appId, @PathVariable String roleName,
             Authentication authentication) {
         try {
@@ -1456,9 +1670,10 @@ public class UserController {
             // Create audit event for the app role removal
             UserProfileDto userProfileDto = userService.getUserProfileById(userId).orElseThrow();
             UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
+                    userProfileDto.getId(),
                     currentUserDto,
                     userProfileDto.getEntraUser(),
-                    List.of("Removed app role: " + roleName + " for app: " + appId),
+                    "Removed app role: " + roleName + " for app: " + appId,
                     "app_role_removed");
             eventService.logEvent(updateUserAuditEvent);
 
@@ -1475,6 +1690,7 @@ public class UserController {
      * Grant Access Flow - Process check answers and complete grant
      */
     @PostMapping("/users/grant-access/{id}/check-answers")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessProcessCheckAnswers(@PathVariable String id, Authentication authentication,
             HttpSession session) {
         try {
@@ -1486,9 +1702,10 @@ public class UserController {
 
             // Create audit event for the final access grant
             UpdateUserAuditEvent updateUserAuditEvent = new UpdateUserAuditEvent(
+                    userProfileDto.getId(),
                     currentUserDto,
                     userProfileDto.getEntraUser(),
-                    List.of("Access granted"),
+                    "Access granted",
                     "access_grant_complete");
             eventService.logEvent(updateUserAuditEvent);
 
@@ -1511,9 +1728,11 @@ public class UserController {
      * Grant Access Flow - Show confirmation page
      */
     @GetMapping("/users/grant-access/{id}/confirmation")
+    @PreAuthorize("@accessControlService.canEditUser(#id)")
     public String grantAccessConfirmation(@PathVariable String id, Model model) {
         UserProfileDto user = userService.getUserProfileById(id).orElseThrow();
         model.addAttribute("user", user);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, "Access granted - " + user.getFullName());
         return "grant-access-confirmation";
     }
 
@@ -1540,9 +1759,78 @@ public class UserController {
         return "redirect:/admin/users/manage/" + id;
     }
 
+    /**
+     * Handle authorization exceptions when user lacks permissions to access
+     * specific users
+     */
+    @ExceptionHandler({ AuthorizationDeniedException.class, AccessDeniedException.class })
+    public RedirectView handleAuthorizationException(Exception ex, HttpSession session) {
+        log.warn("Authorization denied while accessing user: {}", ex.getMessage());
+        return new RedirectView("/not-authorised");
+    }
+
+    /**
+     * Handle general exceptions
+     */
     @ExceptionHandler(Exception.class)
     public RedirectView handleException(Exception ex) {
         log.error("Error while user management", ex);
         return new RedirectView("/error");
+    }
+
+    private Map<String, Object> processRequestFilters(int size, int page, String sort, String direction,
+            String usertype, String search, boolean showFirmAdmins,
+            boolean backButton, HttpSession session, FirmSearchForm firmSearchForm) {
+
+        if (backButton) {
+            // Use session filters when back button is used
+            @SuppressWarnings("unchecked")
+            Map<String, Object> sessionFilters = (Map<String, Object>) session.getAttribute("userListFilters");
+
+            if (sessionFilters != null) {
+                size = sessionFilters.containsKey("size") ? (Integer) sessionFilters.get("size") : size;
+                page = sessionFilters.containsKey("page") ? (Integer) sessionFilters.get("page") : page;
+                sort = sessionFilters.containsKey("sort") ? (String) sessionFilters.get("sort") : sort;
+                direction = sessionFilters.containsKey("direction") ? (String) sessionFilters.get("direction")
+                        : direction;
+                usertype = sessionFilters.containsKey("usertype") ? (String) sessionFilters.get("usertype") : usertype;
+                search = sessionFilters.containsKey("search") ? (String) sessionFilters.get("search") : search;
+                showFirmAdmins = sessionFilters.containsKey("showFirmAdmins")
+                        ? (Boolean) sessionFilters.get("showFirmAdmins")
+                        : showFirmAdmins;
+                firmSearchForm = sessionFilters.containsKey("firmSearchForm")
+                        ? (FirmSearchForm) sessionFilters.get("firmSearchForm")
+                        : firmSearchForm;
+
+                // Handle empty strings for optional parameters
+                if (sort != null && sort.isEmpty()) {
+                    sort = null;
+                }
+                if (direction != null && direction.isEmpty()) {
+                    direction = null;
+                }
+                if (usertype != null && usertype.isEmpty()) {
+                    usertype = null;
+                }
+            }
+        } else {
+            // Clear session filters when not using back button (new filter request)
+            session.removeAttribute("userListFilters");
+        }
+
+        Map<String, Object> result = Map.of(
+                "size", size,
+                "page", page,
+                "sort", sort != null ? sort : "",
+                "direction", direction != null ? direction : "",
+                "search", search != null ? search : "",
+                "showFirmAdmins", showFirmAdmins,
+                "usertype", usertype != null ? usertype : "",
+                "firmSearchForm", firmSearchForm != null ? firmSearchForm : FirmSearchForm.builder().build());
+
+        // Store current filter state in session for future back navigation
+        session.setAttribute("userListFilters", result);
+
+        return result;
     }
 }
